--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "format": "prettier --write \"**/*.{js,json,css,scss}\"",
         "lint": "eslint src",
         "start": "webpack --mode=development --watch",
-        "build": "npm run lint && npm run format && webpack --mode=production"
+        "build": "npm run lint && npm run format && webpack --mode=production && gulp bundle",
+        "prepare": "husky install"
     },
     "author": "",
     "license": "ISC",
@@ -20,13 +21,17 @@
         "babel-loader": "^8.2.2",
         "css-loader": "^6.2.0",
         "css-minimizer-webpack-plugin": "^3.0.2",
+        "del": "^6.0.0",
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-react": "^7.24.0",
         "eslint-webpack-plugin": "^3.0.1",
         "file-loader": "^6.2.0",
-        "imagemin-mozjpeg": "^9.0.0",
+        "gulp": "^4.0.2",
+        "gulp-zip": "^5.1.0",
+        "husky": "^7.0.1",
         "image-minimizer-webpack-plugin": "^2.2.0",
+        "imagemin-mozjpeg": "^9.0.0",
         "mini-css-extract-plugin": "^2.2.0",
         "postcss-loader": "^6.1.1",
         "prettier": "^2.3.2",
@@ -35,14 +40,14 @@
         "webpack": "^5.49.0",
         "webpack-cli": "^4.7.2"
     },
-    "browserslist": [
-        "last 5 versions"
-    ],
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
         "@popperjs/core": "^2.9.3",
         "bootstrap": "^5.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
-    }
+    },
+    "browserslist": [
+        "last 5 versions"
+    ]
 }
