--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     },
     "lint-staged": {
         "src/**/*.js": "eslint",
-        "**/*.{js,json,css,scss}": [
-            "prettier --write",
-            "git add"
-        ]
+        "**/*.{js,json,css,scss}": "prettier --write"
     },
     "author": "",
     "license": "ISC",
