--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "format": "prettier --write \"**/*.{js,json,css,scss}\"",
         "lint": "eslint src",
         "start": "webpack --mode=development --watch",
-        "build": "npm run lint && npm run format && webpack --mode=production && gulp bundle",
+        "build": "npm run lint && npm run format && webpack --mode=production && gulp compress",
         "prepare": "husky install"
     },
     "lint-staged": {
@@ -21,6 +21,7 @@
         "@babel/core": "^7.15.0",
         "@babel/preset-env": "^7.15.0",
         "@babel/preset-react": "^7.14.5",
+        "@babel/register": "^7.14.5",
         "autoprefixer": "^10.3.1",
         "babel-loader": "^8.2.2",
         "css-loader": "^6.2.0",
